second commit Tienda-XDA

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
             <h1>XDA</h1>
         </div>
 
-        <div class="navbar__Menu">.
+        <div class="navbar__Burger">
+            <input type="checkbox" id="toggle">
+            <label for="toggle">
+                <i class="fas fa-bars"></i>
+            </label>
+        </div>
+
+        <div class="navbar__Menu">
             <ul>
                 <li> <a href="">Mujer</a></li>
                 <li> <a href="">Hombre</a></li>
@@ -66,7 +73,8 @@
             <form>
 
                 <label class="content__Newsletter--label" for="email">Correo Electrónico</label>
-                <input class="content__Newsletter--input" type="text" id="email" name="email" placeholder="Ingresa tu correo electrónico">
+                <input class="content__Newsletter--input" type="text" id="email" name="email"
+                    placeholder="Ingresa tu correo electrónico">
 
             </form>
 
